# desktop_app

./: .gitmodules  CMakeLists.txt  CMakeListst.txt  README.md  application.cpp  application.h  application_base.cpp  application_base.h  diff  main.cpp
